--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.1.0",
     "formik": "^1.5.7",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
@@ -36,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^9.1.3",
+    "jest-cucumber": "^2.0.11",
     "redux-devtools": "^3.5.0"
   }
 }
